--- a/style.css
+++ b/style.css
@@ -3,4 +3,56 @@
 
 *{
 font-family: 'Work Sans', sans-serif;
+margin: 0;
+padding: 0;
+}
+
+/* Header Styles */
+header{
+    background-color: rgba(255, 144, 14, 0.10);
+    padding: 50px 240px;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+nav>ul{
+    display: flex;
+}
+nav li{
+    list-style: none;
+    margin-right: 30px;
+    font-weight: 500;
+    font-size: 1rem;
+    
+}
+nav li> a{
+    text-decoration: none;
+    color: #424242;
+}
+.nav-title{
+    color: #131313;
+    font-size: 2.2rem;
+    font-weight: 700;
+}
+
+
+/* Bannar Styles */
+
+.bannar-content{
+    max-width: 800px;
+    text-align: center;
+    margin: 0 auto;
+    padding-top: 30px;
+}
+.bannar-title{
+    color: #131313;
+    font-size: 4rem;
+    font-weight: 700;
+}
+.bannar-description{
+    color: #727272;
+    font-size: 1rem;
+    font-weight: 400;
 }
