--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
 /* Work sans google font */
   @import url('https://fonts.googleapis.com/css2?family=Fasthand&family=Lato:wght@300;400;700;900&family=Open+Sans:ital,wght@0,700;0,800;1,400&family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,700&display=swap');
 
+/* Shared Styles */
 *{
 font-family: 'Work Sans', sans-serif;
 margin: 0;
 padding: 0;
+}
+.btn-primary{
+    border-radius: 8px;
+    background: #FF900E;
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: #FFF;
+    padding: 15px 30px;
+    cursor: pointer;
+    border: 0;
 }
 
 /* Header Styles */
@@ -50,9 +61,36 @@ nav li> a{
     color: #131313;
     font-size: 4rem;
     font-weight: 700;
+    margin-bottom: 30px;
 }
 .bannar-description{
     color: #727272;
     font-size: 1rem;
     font-weight: 400;
+    margin-bottom: 30px;
+}
+.bannar-container img{
+    width: 100%;
+    margin-top: 30px;
+}
+
+
+/* Media queries for  mobile devices */
+@media screen and (max-width:576px){
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+}
+
+/* Media queries for tablet or medium devices */
+@media screen and (min-width:576px) and (max-width:960px){
+    header{
+        padding: 30px;
+    }
+    nav{
+        flex-direction: column;
+    }
 }
