--- a/style.css
+++ b/style.css
@@ -18,6 +18,14 @@ padding: 0;
     border: 0;
 }
 
+.description{
+    color: #727272;
+    font-size: 1rem;
+    line-height: 26px;
+    font-weight: 400;
+    margin-bottom: 30px;
+}
+
 /* Header Styles */
 header{
     background-color: rgba(255, 144, 14, 0.10);
@@ -52,7 +60,7 @@ nav li> a{
 /* Bannar Styles */
 
 .bannar-content{
-    max-width: 800px;
+    
     text-align: center;
     margin: 0 auto;
     padding-top: 30px;
@@ -63,71 +71,58 @@ nav li> a{
     font-weight: 700;
     margin-bottom: 30px;
 }
-.bannar-description{
-    color: #727272;
-    font-size: 1rem;
-    font-weight: 400;
-    margin-bottom: 30px;
-}
+
 .bannar-container img{
     width: 100%;
     margin-top: 30px;
 }
 
 
-/* Styles of Main Section */
-main{
-    max-width:1440px;
-    margin: 0 auto;
-}
-.team-container{
-    display: flex;
-    align-items: center;
-}
-.team-photo-container{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1.5rem
-}
-
-.team-text-container{
-    padding-left: 70px;
-    padding-right: 70px;
-}
-.team-text-title{
-    font-size: 3.8rem;
-    font-weight: 700;
-    margin-bottom: 30px;
-}
-.team-text-title .span-quick{
-    color:#727272;
-}
-.team-text-title .span-feature{
-    color:#FF900E;
-}
 
 
 
 
-
-
-
-/* Media queries for  mobile devices */
 @media screen and (max-width:576px){
-    header{
-        padding: 20px;
-    }
     nav{
         flex-direction: column;
     }
+    header{
+        padding: 20px 20px;
+    }
+
 }
 
-/* Media queries for tablet or medium devices */
-@media screen and (min-width:576px) and (max-width:960px){
-    header{
-        padding: 30px;
-    }
-    nav{
-        flex-direction: column;
-    }
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
